added right and wrong colours

--- a/styles.scss
+++ b/styles.scss
@@ -53,3 +53,11 @@ body {
 .hide{
     display: none;
 }
+
+.correct {
+    background-color: rgb(108, 225, 108);
+}
+
+.wrong {
+    background-color: red;
+}
